src/components/PostViewCard/post-view-card.sass
@import "../../styles/bootstrap.sass"

.post-view-card
  margin-bottom: map-get($spacers, 4)

  &--post-container
    display: flex
    flex-wrap: nowrap
    align-items: flex-start

  &--avatar-container
    padding-right: map-get($spacers, 4)

  &--create-date
    display: block
    padding-bottom: map-get($spacers, 2)

